# Coalumine

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  build.bat  copy_assets.bat  make_video.bat  run.ps1  vcpkg.json
asset/: clean_scene_v3_180_2.gltf
asset/gltf/: rtcamp9.gltf
asset/scenes/: absorp.json  alembic.json  diamond.json  dragon.json  ggx_spheres.json  plane_sphere.json  rtcamp10.json  rtcamp9.json  veach_mis.json
code/: filepath.cpp  filepath.hpp  image_generator.hpp  image_writer.hpp  loader_alembic.cpp  loader_gltf.cpp  loader_gltf.hpp  loader_json.cpp  loader_obj.cpp  loader_obj.hpp  main.cpp  render_pass.cpp  render_pass.hpp  renderer.hpp  scene.cpp  scene.hpp  shader.hpp
code/app/: headless_app.hpp  window_app.hpp
code/loader/: loader_alembic.cpp  loader_alembic.hpp  loader_gltf.cpp  loader_gltf.hpp  loader_json.cpp  loader_json.hpp  loader_obj.cpp  loader_obj.hpp
code/scene/: mesh.hpp  node.hpp  physical_camera.hpp  scene.cpp  scene.hpp
script/: visualize.py
scripts/: copy_assets.bat  make_video.bat  run.ps1
shader/: base.rchit  base.rgen  base.rmiss  blur.comp  color.glsl  composite.comp  intersection.glsl  noise.glsl  perlin.glsl  random.glsl  render.comp  shadow.rmiss  share.h
src/: main.cpp  render_pass.hpp  renderer.hpp  scene.cpp  scene.hpp
